src/objects/Opportunity_Pearson_Course_Code__c.object
<CustomObject>
    <description>Junction linking Opportunities with Category Hierarchy (Pearson Course Equivalent)</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Pearson_Course_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Pearson_Course_Code_Name__c</fullName>
        <description>This is the Pearson course code .</description>
        <inlineHelpText>This is the Pearson course code.</inlineHelpText>
        <label>Pearson Course Code Name</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipName>Opportunity_Pearson_Course_Codes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pearson_Course_Code_Name_f__c</fullName>
        <description>Used to display name of Pearson Course Code Name for related List</description>
        <formula>Pearson_Course_Code_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pearson Course Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Pearson Course Equivalent</label>
    <nameField>
        <displayFormat>OPC-{00000}</displayFormat>
        <label>Opportunity Pearson Course Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pearson Course Equivalents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>